Added welcome discount offer

--- a/styles.css
+++ b/styles.css
@@ -258,6 +258,68 @@ iframe {
 
 
 
+/* ########## Welcome Offer ########## */
+#offer, #form {
+  position: fixed;
+  bottom: 10px;
+  right: 15px;
+
+  border-radius: 15px;
+  margin: 0px;
+  padding: 10px;
+  background: green;
+  color: white;
+}
+
+#offer {
+  width: 250px;
+  text-align: center;
+  cursor: pointer;
+}
+
+#form {
+  display: none;  /* Initially hide form */
+
+  width: 500px;
+  text-align: center;
+}
+
+.close {
+  position: absolute;
+  top: 5px;
+  right: 15px;
+  cursor: pointer;
+}
+
+#email {
+  padding: 10px;
+  border-radius: 10px;
+  width: 350px;
+}
+
+#email::placeholder {
+  font-weight: bold;
+}
+
+#submit {
+  margin-left: 20px;
+  padding: 10px;
+  border-radius: 10px;
+
+  font-weight: bold;
+  font-family: 'Comic Sans MS';
+  color: green;
+}
+
+.disclaimer {
+  font-size: 0.7rem;
+  margin-top: 10px;
+  color: lightgrey;
+}
+/* ########## End Welcome Offer ########## */
+
+
+
 .author {
   font-size: 0.7rem;
 }
