--- a/styles.css
+++ b/styles.css
@@ -9,38 +9,29 @@ body {
   color: #4A31AD;
 }
 
-h2, h3 {
-  font-weight: bold;
-  text-align: center;
-  padding: 10px
-}
-
 
 
 /* ########## Header ########## */
 #header {
-  position: relative;
   box-shadow: 0px 0px 20px 10px #94AD31 inset;
 }
 
 #header-img {
-  position: relative;
   z-index: -1;
   width: 100%;
   height: 300px;
   object-fit: cover;
   object-position: center;
+  opacity: 0.75;
 }
 
 #title {
-  position: absolute;
   bottom: 30px;
   left: 0px;
   right: 0px;
-  margin: 0 auto;
-  text-align: center;
   font-family: 'Pacifico', cursive;
   font-size: 3rem;
+  font-weight: bold;
   letter-spacing: 0.8rem;
 }
 /* ########## End Header ########## */
@@ -48,75 +39,50 @@ h2, h3 {
 
 
 /* ########## Navbar ########## */
-#nav-bar {
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  z-index: 1;
-  margin: 0px;
-  width: 100%;
+.navbar {
   background: green;
 }
 
-#nav-bar ul {
-  list-style-type: none;
-}
-
-#nav-bar li {
-  display: inline-block;
-}
-
-.nav-link {
+.navbar .navbar-nav .nav-link,
+.navbar .navbar-nav .nav-link:hover,
+.navbar .navbar-nav .nav-link:focus {
   color: white;
-  padding: 10px 15px;
-  text-decoration: none;
 }
 
-#signin-link {
-  position: absolute;
-  right: 0px;  /* Position 'Sign In' link to the right */
-}
-
-.nested_list ul {
-  display: none;  /* Hide the nested list by default */
-
-  position: absolute;
-  top: 53px;
-  left: 180px;
-  margin: 0px;
-  padding: 0px;
-  line-height: 2rem;
+.dropdown-menu {
   background: green;
 }
 
-#search_container {
-  position: absolute;
-  top: 12px;
-  right: 100px;  /* Position search bar to the left of 'Sign In' link */
+.dropdown-menu .dropdown-item {
+  color: white;
 }
 
-#search_container input[type="text"] {
-  padding: 10px;
-  background: none;
+.dropdown-menu .dropdown-item:hover {
+  text-decoration: underline;
+  background: #94AD31;
+  color: #4A31AD;
+}
+
+.form-inline input[type=search] {
+  width: 100px;
   border: none;
-  width: 80px;
-  transition: width 1s;
+  background: transparent;
+  transition: 1s;
 }
 
-#search_container input[type="text"]:focus {
-  width: 120px;
+.form-inline input[type=search]:focus {
+  width: 150px;
   border-bottom: 1px solid white;
+  background: transparent;
   outline: none;
 }
 
-#search_container input[type="text"]::placeholder {
+input[type=search]::placeholder {
   color: white;
-  font-weight: bold;
 }
 
-#search_container label {
+.fa-search {
   color: white;
-  cursor: pointer;
 }
 /* ########## End Navbar ########## */
 
@@ -370,3 +336,15 @@ iframe {
 .author {
   font-size: 0.7rem;
 }
+
+
+
+/* ########## Media query ########## */
+@media screen and (max-width: 768px) {
+  .dropdown-menu {
+    background: transparent;
+    border: none;
+    outline: none;
+  }
+}
+/* ########## End media query ########## */
