--- a/styles.css
+++ b/styles.css
@@ -88,156 +88,25 @@ input[type=search]::placeholder {
 
 
 
-/* ########## Products Section ########## */
-#products {
-  position: relative;
-}
-
-/* Position img and ul side-by-side */
-.product {
-  display: flex;
-  justify-content: space-around;
-}
-
-.product img {
-  align-self: flex-start;
-  margin-top: 50px;
-  margin-left: 10px;
-  width: 250px;
-  opacity: 0.8;
-  border-radius: 10px;
-}
-
-.product ul {
-  flex-basis: 700px;
-  margin-left: 20px;
-  padding: 10px;
-  list-style-type: circle;
-}
-
-.product li {
-  margin-bottom: 20px;
-}
-
-.product-slide h3 {
-  background: green;
-  color: white;
-}
-
-.shop_btn {
-  /* Center align button below image on slide */
-  position: absolute;
-  left: 75px;
-  bottom: 75px;
-  width: 100px;
-  margin: 10px;
-
-  padding: 15px 20px;
-  border-radius: 10px;
-  border: none;
-  cursor: pointer;
-
-  background: #4A31AD;
-  color: white;
-  font-weight: bold;
-}
-
-
-/* ********** Product Slideshow ********** */
-.slideshow-container {
-  position: relative;
-  max-width: 1000px;
-  margin: auto;
-  overflow: hidden;
-}
-
-.product-slide {
-  display: none;  /* Hide slides by default */
-  position: relative;
-  min-height: 400px;
-  background: #56AD31;
-}
-
-/* Previous and next buttons */
-#prev, #next {
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 20px;
-
-  color: white;
-  font-weight: bold;
-  font-size: 2rem;
-  border-radius: 0 3px 3px 0;
-
-  cursor: pointer;
-  transition: 0.5s ease;
-}
-
-#next {
-  right: 0px;  /* Position "next button" to the right */
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background to previous and next buttons */
-#prev:hover, #next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Center-align dots/circles indicators */
-.dots-container {
-  position: absolute;
-  left: 0px;
-  right: 0px;
-  bottom: 0px;
+/* ########## Carousel ########## */
+.carousel {
+  max-width: 500px;
   margin: 10px auto;
-  text-align: center;
 }
 
-.dot {
-  display: inline-block;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-
-  background: #bbb;
-  border-radius: 50%;
-  cursor: pointer;
-  transition: background 0.6s ease;
+.carousel-item {
+  height: 280px;
 }
 
-.active, .dot:hover {
-  background: #717171;
+.carousel-item img {
+  object-fit: cover;
+  opacity: 0.75;
 }
 
-
-/* Sliding animations */
-.slide-right {
-  animation-name: slide-right;
-  animation-duration: 5s;
+.carousel-indicators {
+  bottom: -10px;
 }
-
-.slide-left {
-  animation-name: slide-left;
-  animation-duration: 5s;
-}
-
-@keyframes slide-right {
-  0% { left: -1000px; }
-  5% { left: 0px; }
-  95% { left: 0px; }
-  100% { left: 1000px; }
-}
-
-@keyframes slide-left {
-  0% { right: -1000px; }
-  5% { right: 0px; }
-  95% { right: 0px; }
-  100% { right: 1000px; }
-}
-/* ########## End Products Section ########## */
-
+/* ########## End carousel ########## */
 
 
 
