--- a/styles.css
+++ b/styles.css
@@ -154,6 +154,7 @@ input[type=search]::placeholder {
 }
 
 iframe {
+  border: none;
   border-radius: 20px;
 }
 /* ########## End About Section ########## */
