--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,7 @@ input[type=search]::placeholder {
 /* ########## Carousel ########## */
 .carousel {
   width: 500px;
+  height: 280px;
   margin: 10px auto;
 }
 
